kubernetes/apps/autobrr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autobrr
  namespace: autobrr
  labels:
    app: autobrr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: autobrr
  template:
    metadata:
      labels:
        app: autobrr
    spec:
      containers:
        - name: autobrr
          image: ghcr.io/nmourapt/autobrr-qbitrace:v1.73.0
          ports:
            - containerPort: 7474
              protocol: TCP
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: autobrr-config
