kubernetes/apps/autobrr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autobrr
  namespace: autobrr
  labels:
    app: autobrr
spec:
  type: ClusterIP
  ports:
    - port: 7474
      targetPort: 7474
      protocol: TCP
      name: http
  selector:
    app: autobrr
