kubernetes/apps/autobrr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: autobrr
  namespace: autobrr
  annotations:
    external-dns.kubernetes.io/target: <path:cloudflared:tunnel-config#tunnel-target>
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`autobrr.<path:cert-manager:domain-config#domain>`)
      kind: Rule
      services:
        - name: autobrr
          port: 7474
  tls: {}
